--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
 
     <dependencies>
         <!-- For REST components -->
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-actuator</artifactId>
+      </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
