--- a/pom.xml
+++ b/pom.xml
@@ -24,14 +24,19 @@
 
     <dependencies>
         <!-- For REST components -->
-      <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-actuator</artifactId>
-      </dependency>
+        <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 
         <!-- Main spring-boot dependency -->
@@ -64,9 +69,15 @@
       <version>5.4.2</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+        <groupId>org.jetbrains</groupId>
+        <artifactId>annotations</artifactId>
+        <version>RELEASE</version>
+        <scope>compile</scope>
+      </dependency>
 
 
-  </dependencies>
+    </dependencies>
   <build>
     <resources>
       <resource>
